tdf#101898: Only re-substitute whole segments with $(username)

...otherwise, if $(username) happens to be "user", it will endlessly re-
substitute inside a (already partly re-substituted) URL of the form

  $(user)/...

Regression introduced with 16fb0d3d0f68708c183c53bd18660a23970b77fe "tdf#98407
PathSubstitution: Add substitution for $(username)".

Change-Id: I1c8b64f383fdfd97fa5edc192e9ca4b46944d6f1